--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/269eff0a2c.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <ul class="nav justify-content-center bg-warning">
+            <img src="https://cdn.iconscout.com/icon/free/png-256/starfleet-282141.png">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Starship Enterprise</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Holodeck</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Star Fleet Academy</a>
+        </li>
+        <img src="https://cdn.iconscout.com/icon/free/png-256/starfleet-282141.png">
+    </ul>
 </body>
 </html>
