--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
         </li>
         <img src="https://cdn.iconscout.com/icon/free/png-256/starfleet-282141.png">
     </ul>
+    <div class="jumbotron jumbotron-fluid bg-dark text-warning container border mt-5">
+        <div class="container">
+          <h1 class="display-4 text-center">Space....the final frontier</h1>
+          <p class="lead">These are the voyages of the starship Enterprise. Its five-year mission: to explore strange new worlds. To seek out new life and new civilizations. To boldly go where no man has gone before!</p>
+        </div>
+      </div>
 </body>
 </html>
