--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="container">
             <h1 class="display-4 text-center">Space....the final frontier</h1>
             <hr>
-            <p class="lead">These are the voyages of the starship Enterprise. Its five-year mission: to explore strange new worlds. To seek out new life and new civilizations. To boldly go where no man has gone before!</p>
+            <p class="lead">These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds. To seek out new life and new civilizations. To boldly go where no man has gone before!</p>
           </div>
         </div>
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
